--- a/src/sample/fxml/manage.fxml
+++ b/src/sample/fxml/manage.fxml
@@ -1,47 +1,101 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.ManageController">
-   <children>
-      <TabPane prefHeight="600.0" prefWidth="900.0" tabClosingPolicy="UNAVAILABLE">
-        <tabs>
-          <Tab text="课程管理">
-               <content>
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0">
+    <children>
+        <TabPane fx:id="tabPane" prefHeight="600.0" prefWidth="900.0" tabClosingPolicy="UNAVAILABLE">
+            <tabs>
+                <Tab fx:id="tabCourse" text="课程管理">
+                    <content>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                            <children>
+                                <TableView fx:id="tableCourse" layoutX="7.0" layoutY="7.0" prefHeight="475.0" prefWidth="887.0">
+                                    <columns>
+                                        <TableColumn fx:id="columnName" prefWidth="273.99998474121094" text="课程名称" />
+                                        <TableColumn fx:id="columnNum" prefWidth="266.0" text="课程号" />
+                                        <TableColumn fx:id="columnScore" prefWidth="219.0" text="学分" />
+                                        <TableColumn fx:id="columnDelete" prefWidth="99.0" text="删除" />
+                                    </columns>
+                                </TableView>
+                                <TextField fx:id="cName" layoutX="14.0" layoutY="499.0" promptText="课程名称" />
+                                <TextField fx:id="cNum" layoutX="216.0" layoutY="499.0" promptText="课程号" />
+                                <TextField fx:id="cScore" layoutX="418.0" layoutY="499.0" promptText="课程学分" />
+                                <Button fx:id="btnAdd" layoutX="620.0" layoutY="499.0" mnemonicParsing="false" onMouseClicked="#addCourse" text="添加" />
+                                <Button fx:id="btnChange" layoutX="776.0" layoutY="499.0" mnemonicParsing="false" onMouseClicked="#changeCourse" text="保存所有修改" />
+                            </children>
+                        </AnchorPane>
+                    </content>
+                </Tab>
+                <Tab fx:id="tabKnowledge" text="知识点管理">
+                    <content>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                            <children>
+                                <TableView fx:id="tableKnowledge" layoutX="7.0" layoutY="7.0" prefHeight="475.0" prefWidth="887.0">
+                                    <columns>
+                                        <TableColumn fx:id="columnKContent" prefWidth="493.99998474121094" text="知识点" />
+                                        <TableColumn fx:id="columnKCourse" prefWidth="258.0" text="所属课程" />
+                                        <TableColumn fx:id="columnKDelete" prefWidth="99.0" text="删除" />
+                                    </columns>
+                                </TableView>
+                                <TextField fx:id="kContent" layoutX="14.0" layoutY="499.0" promptText="知识点" />
+                                <TextField fx:id="kCourse" layoutX="216.0" layoutY="499.0" promptText="所属课程" />
+                                <Button layoutX="418.0" layoutY="499.0" mnemonicParsing="false" onMouseClicked="#addKnowledge" text="添加" />
+                            </children>
+                        </AnchorPane>
+
+                    </content>
+                </Tab>
+                <Tab fx:id="tabQuestion" text="试题管理">
+                    <content>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                            <children>
+                                <TableView fx:id="tableQuestion" layoutX="7.0" layoutY="7.0" prefHeight="475.0" prefWidth="887.0">
+                                    <columns>
+                                        <TableColumn fx:id="columnQType" prefWidth="78.99998474121094" text="题目类型" />
+                                        <TableColumn fx:id="columnQContent" prefWidth="226.0" text="题干" />
+                                        <TableColumn fx:id="columnAnswer" prefWidth="203.0" text="题目备选项" />
+                                        <TableColumn fx:id="columnRightAnswer" prefWidth="84.0" text="正确答案" />
+                                        <TableColumn fx:id="columnQKContent" prefWidth="95.0" text="所属知识点" />
+                                        <TableColumn fx:id="columnQCourse" prefWidth="88.0" text="所属课程" />
+                                        <TableColumn fx:id="columnQDelete" prefWidth="99.0" text="删除" />
+                                    </columns>
+                                </TableView>
+                                <TextField fx:id="qType" layoutX="7.0" layoutY="499.0" prefHeight="30.0" prefWidth="87.0" promptText="题目类型" />
+                                <TextField fx:id="qContent" layoutX="92.0" layoutY="499.0" prefHeight="30.0" prefWidth="223.0" promptText="题干" />
+                                <TextField fx:id="qAnswer" layoutX="314.0" layoutY="499.0" prefHeight="30.0" prefWidth="212.0" promptText="题目备选项" />
+                                <TextField fx:id="qRightAnswer" layoutX="526.0" layoutY="499.0" prefHeight="30.0" prefWidth="97.0" promptText="正确答案" />
+                                <TextField fx:id="qKnowledge" layoutX="623.0" layoutY="499.0" prefHeight="30.0" prefWidth="101.0" promptText="所属知识点" />
+                                <TextField fx:id="qCourse" layoutX="723.0" layoutY="499.0" prefHeight="30.0" prefWidth="113.0" promptText="所属课程" />
+                                <Button layoutX="836.0" layoutY="499.0" mnemonicParsing="false" onMouseClicked="#addQuestion" text="添加" />
+
+                            </children>
+                        </AnchorPane>
+
+                    </content>
+                </Tab>
+                <Tab fx:id="tabInstructions" text="使用说明">
+                    <content>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
                      <children>
-                        <TableView fx:id="tableCourse" layoutX="7.0" layoutY="7.0" prefHeight="475.0" prefWidth="887.0">
-                          <columns>
-                            <TableColumn fx:id="columnName" prefWidth="273.99998474121094" text="课程名称" />
-                            <TableColumn fx:id="columnNum" prefWidth="266.0" text="课程号" />
-                            <TableColumn fx:id="columnScore" prefWidth="219.0" text="学分" />
-                            <TableColumn fx:id="columnDelete" prefWidth="99.0" text="删除" />
-                          </columns>
-                        </TableView>
-                        <TextField layoutX="14.0" layoutY="499.0" promptText="课程名称" fx:id="cName"/>
-                        <TextField layoutX="216.0" layoutY="499.0" promptText="课程号" fx:id="cNum"/>
-                        <TextField layoutX="418.0" layoutY="499.0" promptText="课程学分" fx:id="cScore"/>
-                        <Button layoutX="620.0" layoutY="499.0" mnemonicParsing="false" text="添加" fx:id="btnAdd" onMouseClicked="#addCourse"/>
-                        <Button layoutX="776.0" layoutY="499.0" mnemonicParsing="false" text="保存所有修改" fx:id="btnChange" onMouseClicked="#changeCourse"/>
+                        <Label layoutX="14.0" layoutY="14.0" prefWidth="868.0" text="使用说明如下：试题管理模块添加新试题文本框的格式，题目类型只能填：单选题、多选题、判断题、填空题其中一个；题目备选项格式（判断题和填空题则不填）：A.答案B.答案C.答案D.答案；正确答案单选题就写A、B、C、D其中一个，多选题写AB、ABC等组合，判断题则写”对”或“错”，填空题该写啥写啥" wrapText="true">
+                           <font>
+                              <Font size="20.0" />
+                           </font></Label>
                      </children>
-                  </AnchorPane>
-               </content></Tab>
-          <Tab text="知识点管理">
-               <content>
-                  <Button mnemonicParsing="false" text="Button" />
-               </content></Tab>
-          <Tab text="试题管理">
-               <content>
-                  <CheckBox mnemonicParsing="false" text="CheckBox" />
-               </content></Tab>
+                        </AnchorPane>
+
+                    </content>
+                </Tab>
         </tabs>
-      </TabPane>
-   </children>
-</AnchorPane>
+    </TabPane>
+</children>
+        </AnchorPane>
