--- a/src/sample/fxml/manage.fxml
+++ b/src/sample/fxml/manage.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.ManageController">
+<AnchorPane fx:id="manageAp" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.ManageController">
     <children>
         <TabPane fx:id="tabPane" prefHeight="600.0" prefWidth="900.0" tabClosingPolicy="UNAVAILABLE">
             <tabs>
